<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rh_plus_2_axis_manipulator_code</name>
  <version>0.0.1</version>
  <description>RH+ 2axis manipulator</description>
  <maintainer email="ppp6131@yonsei.ac.kr">minipin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp</depend>
  <depend>rh_plus_interface</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>camera_info_manager</depend> -->
  <depend>image_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
