<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>rh_plus_2_axis_manipulator_description</name>
  <version>0.0.0</version>
<description>The rh_plus_2_axis_manipulator_description package</description>
  <maintainer email="chanhui.robot@gmail.com">chanhui</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
